[project]
name = "travel-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "google-genai>=1.27.0",
    "pymongo>=4.13.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
]
[tool.setuptools]
# Explicitly include top-level files and folders that are part of your app
py-modules = ["app", "database"]
packages = ["chatbot"]